# NZ5_flightdata

./: README.md
NZ5_flightdatar/: CMakeLists.txt  NZ5_flightdatar.csv  main.cpp
NZ5_flightdatar/include/: BinaryFileWriter.h  CSVReader.h  FlightData.h  GeoJSONWriter.h
NZ5_flightdatar/src/: BinaryFileWriter.cpp  CSVReader.cpp  GeoJSONWriter.cpp  GeoTIFFHandler.cpp
